fix: vercel 정책 변경 반영

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "cron": {
-    "daily-upbit": {
+  "crons": [
+    {
       "path": "/api/cron",
       "schedule": "0 0 * * *"
     }
-  }
+  ]
 }
